<resources>
    <string name="app_name">MFManagement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_raw_screen">Raw Stock</string>
    <string name="name_raw_entry_screen">Entry - Raw Stock</string>
    <string name="name_ready_screen">Ready Stock</string>
    <string name="name_ready_entry_screen">Entry - Ready Stock</string>

    <string name="filter_by">Filter By</string>
    <string name="search">Search</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="demanded_quantity">Demanded Quantity</string>
    <string name="receive_date">Receive Date</string>
    <string name="column">:</string>
    <string name="product_name">Product Name</string>
    <string name="color">Color</string>
    <string name="comment">Comment</string>
    <string name="entry">Entry</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="total_amount">Total Amount: %1s %2s</string>
    <string name="total_quantity">Total Quantity: %1s %2s</string>
    <string name="amount">Amount</string>
    <string name="deliver">Deliver</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sold">Sold</string>

    <string name="msg_enter_amount">Enter the amount</string>
    <string name="msg_select_shop">Select the shop</string>
    <string name="msg_amount_grater">Amount entered is greater than total</string>
    <string name="msg_empty_comment">Enter a comment</string>

    <string name="title_activity_shop">ShopActivity</string>
    <string name="price">Price</string>
    <string name="mark_as_received">Receive</string>
    <string name="title_mark_as_received">Mark As Received</string>
    <string name="title_mark_as_completed">Mark As Completed</string>
    <string name="msg_mark_as_received">Please confirm that you received the stock for %1s</string>
    <string name="msg_confirm_delete">Are you sure want to delete the product %1s</string>
    <string name="msg_mark_as_completed">Please confirm that you delivered the stock to %1s</string>
    <string name="sold_date">Sold Date</string>
    <string name="demanded_shop">Demanded Shop</string>
    <string name="priority">Priority</string>
    <string name="demanded_date">Demanded Date</string>
    <string name="staff_name">Staff Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="ready_date">Ready Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="deliver_to">Deliver To</string>
    <string name="default_notification_channel_id">1001</string>

</resources>
